# ACGPlugin

./: CMakeLists.txt
include/: Logger.h  dataflow.h  dataflow.hxx  difinder.h  difinder.hxx  generator.hxx  metacg.h  metacg.hxx  omp.h  omp.hxx  resolver.h  resolver.hxx
src/: ACGPlugin.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/codes/: argflow.cpp  argflow.ll  functionPoint.cpp  openmp.cpp  out.mcg  simple.cpp  virtualInheritance.cpp  virtuals.cpp
